k8s/_raw/an-deploy-mereo-dagster-dagster-webserver.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    meta.helm.sh/release-name: mereo-dagster
    meta.helm.sh/release-namespace: mereo-analytics
  labels:
    app.kubernetes.io/instance: mereo-dagster
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: dagster
    app.kubernetes.io/version: 1.13.6
    component: dagster-webserver
    helm.sh/chart: dagster-1.13.6
  name: mereo-dagster-dagster-webserver
  namespace: mereo-analytics
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: mereo-dagster
      app.kubernetes.io/name: dagster
      component: dagster-webserver
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      annotations:
        checksum/dagster-instance: 8313f9ce86b88e7625ee92633f2e893a8831de37e75af0a14f80a4bc253c06d6
        checksum/dagster-workspace: 4be108f47500326d2388b94d95f78aed84a03cdf2171d5b1082c2705f2b4e6f9
      labels:
        app.kubernetes.io/instance: mereo-dagster
        app.kubernetes.io/name: dagster
        component: dagster-webserver
    spec:
      automountServiceAccountToken: true
      containers:
      - command:
        - /bin/bash
        - -c
        - dagster-webserver -h 0.0.0.0 -p 80 -w /dagster-workspace/workspace.yaml
        image: docker.io/dagster/dagster-celery-k8s:1.13.6
        imagePullPolicy: Always
        name: dagster
        ports:
        - containerPort: 80
          name: http
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /server_info
            port: 80
            scheme: HTTP
          periodSeconds: 20
          timeoutSeconds: 10
        resources: {}
        volumeMounts:
        - mountPath: /opt/dagster/dagster_home/dagster.yaml
          name: dagster-instance
          subPath: dagster.yaml
        - mountPath: /dagster-workspace/
          name: dagster-workspace-yaml
      serviceAccount: mereo-dagster
      serviceAccountName: mereo-dagster
      volumes:
      - configMap:
          defaultMode: 420
          name: mereo-dagster-instance
        name: dagster-instance
      - configMap:
          defaultMode: 420
          name: mereo-dagster-workspace-yaml
        name: dagster-workspace-yaml
