k8s/_raw/an-sts-postgres.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  annotations:
    meta.helm.sh/release-name: mereo-dagster
    meta.helm.sh/release-namespace: mereo-analytics
  labels:
    app: postgresql
    app.kubernetes.io/managed-by: Helm
    chart: postgresql-8.1.0
    heritage: Helm
    release: mereo-dagster
  name: mereo-dagster-postgresql
  namespace: mereo-analytics
spec:
  persistentVolumeClaimRetentionPolicy:
    whenDeleted: Retain
    whenScaled: Retain
  replicas: 1
  selector:
    matchLabels:
      app: postgresql
      release: mereo-dagster
      role: master
  serviceName: mereo-dagster-postgresql-headless
  template:
    metadata:
      labels:
        app: postgresql
        chart: postgresql-8.1.0
        heritage: Helm
        release: mereo-dagster
        role: master
      name: mereo-dagster-postgresql
    spec:
      containers:
      - env:
        - name: BITNAMI_DEBUG
          value: 'false'
        - name: POSTGRESQL_PORT_NUMBER
          value: '5432'
        - name: POSTGRESQL_VOLUME_DIR
          value: /bitnami/postgresql
        - name: PGDATA
          value: /bitnami/postgresql/data
        - name: POSTGRES_USER
          value: test
        - name: POSTGRES_PASSWORD
          valueFrom:
            secretKeyRef:
              key: postgresql-password
              name: mereo-dagster-postgresql
        - name: POSTGRES_DB
          value: test
        - name: POSTGRESQL_ENABLE_LDAP
          value: 'no'
        image: docker.io/library/postgres:14.6
        livenessProbe:
          exec:
            command:
            - /bin/sh
            - -c
            - exec pg_isready -U "test" -d "test" -h 127.0.0.1 -p 5432
          failureThreshold: 6
          initialDelaySeconds: 30
          periodSeconds: 10
          timeoutSeconds: 5
        name: mereo-dagster-postgresql
        ports:
        - containerPort: 5432
          name: tcp-postgresql
        readinessProbe:
          exec:
            command:
            - /bin/sh
            - -c
            - -e
            - 'pg_isready -U "test" -d "test" -h 127.0.0.1 -p 5432

              '
          failureThreshold: 6
          initialDelaySeconds: 5
          periodSeconds: 10
          timeoutSeconds: 5
        resources:
          requests:
            cpu: 250m
            memory: 256Mi
        securityContext:
          runAsUser: 1001
        volumeMounts:
        - mountPath: /dev/shm
          name: dshm
        - mountPath: /bitnami/postgresql
          name: data
      securityContext:
        fsGroup: 1001
      volumes:
      - emptyDir:
          medium: Memory
          sizeLimit: 1Gi
        name: dshm
  updateStrategy:
    type: RollingUpdate
  volumeClaimTemplates:
  - apiVersion: v1
    kind: PersistentVolumeClaim
    metadata:
      name: data
    spec:
      accessModes:
      - ReadWriteOnce
      resources:
        requests:
          storage: 8Gi
