k8s/_raw/an-svc-mereo-analytics-code.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: mereo-analytics-code
  name: mereo-analytics-code
  namespace: mereo-analytics
spec:
  ports:
  - name: grpc
    port: 3030
    targetPort: 3030
  selector:
    app: mereo-analytics-code
  type: ClusterIP
