k8s/_raw/an-svc-mereo-dagster-dagster-webserver.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    meta.helm.sh/release-name: mereo-dagster
    meta.helm.sh/release-namespace: mereo-analytics
  labels:
    app.kubernetes.io/instance: mereo-dagster
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: dagster
    app.kubernetes.io/version: 1.13.6
    component: dagster-webserver
    helm.sh/chart: dagster-1.13.6
  name: mereo-dagster-dagster-webserver
  namespace: mereo-analytics
spec:
  ports:
  - name: http
    port: 80
    targetPort: 80
  selector:
    app.kubernetes.io/instance: mereo-dagster
    app.kubernetes.io/name: dagster
    component: dagster-webserver
  type: ClusterIP
