k8s/_raw/ss-service-mssql.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: mssql
  name: mssql
  namespace: mereo-sqlserver
spec:
  ports:
  - name: tds
    port: 1433
    targetPort: 1433
  selector:
    app: mssql
  type: ClusterIP
