k8s/_raw/an-ingress-dagster-ui.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    app.kubernetes.io/part-of: mereo-analytics
  name: dagster-ui
  namespace: mereo-analytics
spec:
  ingressClassName: traefik
  rules:
  - host: dagster.mereo.local
    http:
      paths:
      - backend:
          service:
            name: mereo-dagster-dagster-webserver
            port:
              number: 80
        path: /
        pathType: Prefix
